--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "preact-render-to-string": "^6.0.3",
     "pretty-bytes": "^6.1.0",
     "pretty-time": "^1.1.0",
+    "react-native-lightbox-v2": "^0.9.0",
     "reading-time": "^1.5.0",
     "rehype-autolink-headings": "^6.1.1",
     "rehype-katex": "^6.0.3",
